examples/test/testpolicy554.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy554
  namespace: namespace251
spec:
  podSelector:
    matchLabels:
      key22: value21
      key18: value25
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key9: value41
      podSelector:
        matchLabels:
          key47: value16
          key1: value10
